[tool.poetry]
name = "confluence-junction"
version = "0.1.1"
description = "Publish to and manage Confluence spaces with markdown files tracked in Git."
authors = ["HUU <readabook123@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HUU/Junction"
keywords = ["confluence", "markdown", "git", "sync", "convert"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Version Control :: Git"
]
packages = [
    { include = "junction", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
markdown = "^3.0.1"
markdownsuperscript = "^2.1.1"
markdownsubscript = "^2.1.1"
markdown-urlize = "^0.2.0"
markdown-emdash = "^0.1.0"
gitpython = "^3.0.5"
click = "^7.0"
click-log = "^0.3.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
notebook = "^6.0.3"
black = "==19.10b0"
flake8 = "^3.7.9"
pre-commit = "^2.0.1"
rope = "^0.16.0"
pycodestyle = "^2.6.0"
mypy = "^0.770"
pyflakes = "^2.2.0"

[tool.poetry.scripts]
junction = "junction.cli:main"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
