[tool.poetry]
name = "confluence-junction"
version = "0.1.2"
description = "Publish to and manage Confluence spaces with markdown files tracked in Git."
authors = ["HUU <readabook123@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HUU/Junction"
keywords = ["confluence", "markdown", "git", "sync", "convert"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Version Control :: Git"
]
packages = [
    { include = "junction", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
markdown = "^3.6"
gitpython = "^3.0.5"
click = "^8.0"
click-log = "^0.3.2"
colorama = "^0.4.3"
pymdown-extensions = "^10.8.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
notebook = "^6.0.3"
black = "^24.4.2"
flake8 = "^3.7.9"
pre-commit = "^2.0.1"
rope = "^0.16.0"
types-markdown = "^3.6.0.20240316"
types-requests = "^2.31.0.20240406"
pycodestyle = "^2.6.0"
mypy = "^0.982"
pyflakes = "^2.2.0"

[tool.poetry.scripts]
junction = "junction.cli:main"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
